kubernetes/skywalker/auth/auth.namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: auth
  labels:
    istio-injection: enabled
